--- a/index.html
+++ b/index.html
@@ -27,9 +27,13 @@
                 </div>
                 <div class="message">
                     <i class="fa-solid fa-user"></i>
-                    <p>Rodrigo</p>
+                    <p style="font-weight: bold;">Rodrigo</p>
                     <p>Welcom to my Portfolio</p>
                 </div>
+            </div>
+            <div class="lock-icon">
+                <i class="fa-solid fa-unlock"></i>
+                <p>Swipe up to unlock</p>
             </div>
         </div>  
     </section>
