--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
                 </div>
                 <div class="message">
                     <i class="fa-solid fa-user"></i>
-                    <p style="font-weight: bold;">Rodrigo</p>
-                    <p>Welcom to my Portfolio</p>
+                    <div class="message-content">
+                        <p style="font-weight: bold;">Rodrigo</p>
+                        <p>Welcom to my Portfolio</p>
+                    </div>
                 </div>
             </div>
             <div class="lock-icon">
