--- a/index.html
+++ b/index.html
@@ -41,61 +41,63 @@
     </section>
 
     <!-- main site -->
+    <div class="main-site">
+        <header>
+            <div class="notification">
+                <div class="time">
+                    <h3>12:30</h3>
+                </div>
+                <div class="other-notification">
+                    <h3><i class="fa-solid fa-circle-down"></i></h3>
+                </div>
+            </div>
+            <div class="info">
+                <div class="wifi-bar">
+                    <h3><i class="fa-solid fa-wifi"></i></h3>
+                </div>
+                <div class="signal">
+                    <h3><i class="fa-solid fa-signal"></i></h3>
+                </div>
+                <div class="battery">
+                    <h3><i class="fa-solid fa-battery-three-quarters"></i></h3>
+                </div>
+            </div>
+        </header>
 
-    <header>
-        <div class="notification">
-            <div class="time">
-                <h3>12:30</h3>
+        <section class="apps">
+            <div class="app">
+                <a href="">
+                    <img src="https://cdn-icons-png.flaticon.com/512/2622/2622682.png" alt="Skills">
+                    <h5>Skills</h5>
+                </a>
             </div>
-            <div class="other-notification">
-                <h3><i class="fa-solid fa-circle-down"></i></h3>
+            <div class="app">
+                <a href="">
+                    <img src="https://cdn-icons-png.flaticon.com/512/7766/7766332.png" alt="about me">
+                    <h5>Sobre mi</h5>
+                </a>
             </div>
-        </div>
-        <div class="info">
-            <div class="wifi-bar">
-                <h3><i class="fa-solid fa-wifi"></i></h3>
+            <div class="app">
+                <a href="">
+                    <img src="https://cdn-icons-png.freepik.com/512/10655/10655913.png" alt="Work">
+                    <h5>Work</h5>
+                </a>
             </div>
-            <div class="signal">
-                <h3><i class="fa-solid fa-signal"></i></h3>
+            <div class="app">
+                <a href="">
+                    <img src="https://i.pinimg.com/564x/bf/8a/76/bf8a76719f900b8757154eb3cfbc844a.jpg" alt="Contact">
+                    <h5>Contact</h5>
+                </a>
             </div>
-            <div class="battery">
-                <h3><i class="fa-solid fa-battery-three-quarters"></i></h3>
-            </div>
-        </div>
-    </header>
+        </section>
+    </div>
 
-    <section class="apps">
-        <div class="app">
-            <a href="">
-                <img src="https://cdn-icons-png.flaticon.com/512/2622/2622682.png" alt="Skills">
-                <h5>Skills</h5>
-            </a>
-        </div>
-        <div class="app">
-            <a href="">
-                <img src="https://cdn-icons-png.flaticon.com/512/7766/7766332.png" alt="about me">
-                <h5>Sobre mi</h5>
-            </a>
-        </div>
-        <div class="app">
-            <a href="">
-                <img src="https://cdn-icons-png.freepik.com/512/10655/10655913.png" alt="Work">
-                <h5>Work</h5>
-            </a>
-        </div>
-        <div class="app">
-            <a href="">
-                <img src="https://i.pinimg.com/564x/bf/8a/76/bf8a76719f900b8757154eb3cfbc844a.jpg" alt="Contact">
-                <h5>Contact</h5>
-            </a>
-        </div>
-
-    </section>
-
-    <footer>
-        <a href=""><i class="fa-solid fa-caret-left"></i></a>
-        <a href=""><i class="fa-solid fa-circle"></i></a>
-        <a href=""><i class="fa-solid fa-square"></i></a>
-    </footer>
+        <footer>
+            <a href=""><i class="fa-solid fa-caret-left"></i></a>
+            <a href=""><i class="fa-solid fa-circle"></i></a>
+            <a href=""><i class="fa-solid fa-square"></i></a>
+        </footer>
+  
+    <script src="script.js"></script>
 </body>
 </html>
