--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <section class="lock-screen">
         <div class="lock-container">
             <div class="date-time">
-                <h2>12:00</h2>
-                <h3>Wed, Nov 5</h3>
+                <h2 class="realtime">12:00</h2>
+                <h3 class="realdate">Wed, Nov 5</h3>
             </div>
             <div class="lock-notification">
                 <div class="head">
@@ -29,7 +29,7 @@
                     <i class="fa-solid fa-user"></i>
                     <div class="message-content">
                         <p style="font-weight: bold;">Rodrigo</p>
-                        <p>Welcom to my Portfolio</p>
+                        <p>Welcome to my Portfolio</p>
                     </div>
                 </div>
             </div>
@@ -45,7 +45,7 @@
         <header>
             <div class="notification">
                 <div class="time">
-                    <h3>12:30</h3>
+                    <h3 class="realtime">12:30</h3>
                 </div>
                 <div class="other-notification">
                     <h3><i class="fa-solid fa-circle-down"></i></h3>
@@ -92,11 +92,88 @@
         </section>
     </div>
 
+        
+
         <footer>
             <a href=""><i class="fa-solid fa-caret-left"></i></a>
             <a href=""><i class="fa-solid fa-circle"></i></a>
             <a href=""><i class="fa-solid fa-square"></i></a>
         </footer>
+
+        <div class="notification-panel">
+            <div class="notification-content">
+                <header>
+                    <div class="notification">
+                        <div class="time">
+                            <h3 class="realtime">12:30</h3>
+                        </div>
+                        <div class="other-notification">
+                            <h3 class="realdate"></h3>
+                        </div>
+                    </div>
+                    <div class="info">
+                        <div class="wifi-bar">
+                            <h3><i class="fa-solid fa-wifi"></i></h3>
+                        </div>
+                        <div class="signal">
+                            <h3><i class="fa-solid fa-signal"></i></h3>
+                        </div>
+                        <div class="battery">
+                            <h3><i class="fa-solid fa-battery-three-quarters"></i></h3>
+                        </div>
+                    </div>
+                </header>
+                <div class="noti-options">
+                    <div class="options">
+                        <div class="icon-container">
+                          <i class="fa-solid fa-sun"></i>  
+                        </div>
+                        <p>Change Mode</p>
+                    </div>
+                    <div class="options">
+                        <div class="icon-container">
+                          <i class="fa-solid fa-sun"></i>  
+                        </div>
+                        <p>Change Mode</p>
+                    </div>
+                    <div class="options">
+                        <div class="icon-container">
+                          <i class="fa-solid fa-sun"></i>  
+                        </div>
+                        <p>Change Mode</p>
+                    </div>
+                    <div class="options">
+                        <div class="icon-container">
+                          <i class="fa-solid fa-sun"></i>  
+                        </div>
+                        <p>Change Mode</p>
+                    </div>
+                </div>
+                <div class="see-noti">
+                    <div class="noti-container">
+                        <div class="top-noti">
+                            <div class="left-noti">
+                                <img src="foto.jpg" alt="">
+                            </div>
+                            <div class="right-noti">
+                                <div class="noti-title">
+                                    <p>Rodrigo</p>
+                                </div>
+                                <div class="noti-content">
+                                    <p>I've updated my profile.</p>
+                                    <p>Take a look!</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="bottom-noti">
+                            <a href="">Reply</a>
+                            <a href="">Mark as read</a>
+                            <a href="">Mute</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
   
     <script src="script.js"></script>
 </body>
